[REFACTOR] Implementing clean code and extract method