@@ -20,8 +20,8 @@ import org.springframework.stereotype.Service;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+import static id.ac.ui.cs.advprog.everest.modules.technicianreport.constants.ReportConstants.*;
 import static org.apache.commons.lang3.StringUtils.upperCase;
 
 @Service
@@ -32,16 +32,18 @@ public class TechnicianReportServiceImpl implements TechnicianReportService {
     private final RepairEventPublisher repairEventPublisher;
     private final TechnicianReportAuditLogger auditLogger;
 
-    private static final String DRAFT = "DRAFT";
-    private static final String SUBMITTED = "SUBMITTED";
-    private static final String APPROVED = "APPROVED";
-    private static final String REJECTED = "REJECTED";
-    private static final String IN_PROGRESS = "IN_PROGRESS";
-
     private static final String TECHNICIAN_REPORT_NOT_FOUND = "Technician report not found";
     private static final String TECHNICIAN_REPORT_DATA_NULL = "Report data cannot be null";
-    private static final String REPORT_DATA_OR_TECHNICIAN_NULL = "Report data or technician cannot be null or empty";
     private static final String REPAIR_ORDER_NOT_FOUND = "Repair order not found";
+    private static final String REPAIR_ORDER_ALREADY_EXISTS = "Repair order already exists";
+    private static final String UNAUTHORIZED_REPORT_ACCESS = "You are not authorized to access this report";
+    private static final String UNAUTHORIZED_REPORT_UPDATE = "You are not authorized to update this report";
+    private static final String REPORT_NOT_SUBMITTED = "This report is not in submitted state";
+    private static final String ONLY_APPROVED_REPORTS_CAN_START = "Only approved reports can be started";
+    private static final String ONLY_IN_PROGRESS_REPORTS_CAN_COMPLETE = "Only reports in progress can be completed";
+    private static final String ONLY_DRAFTS_CAN_BE_UPDATED = "Only report drafts can be updated";
+    private static final String REPAIR_ORDER_NOT_IN_PROGRESS = "Repair order is not in progress";
+    private static final String CUSTOMER_CANNOT_VIEW_DRAFTS = "Only report above Draft can be seen by Customer";
 
     public TechnicianReportServiceImpl(
             TechnicianReportRepository technicianReportRepository,
@@ -57,50 +59,23 @@ public class TechnicianReportServiceImpl implements TechnicianReportService {
 
     @Override
     public GenericResponse<TechnicianReportDraftResponse> createTechnicianReportDraft(
-            CreateTechnicianReportDraftRequest createTechnicianReportDraft,
+            CreateTechnicianReportDraftRequest request,
             AuthenticatedUser technician) {
 
         try {
-            createTechnicianReportDraft.validate();
+            request.validate();
 
-            String repairOrderId = createTechnicianReportDraft.getRepairOrderId();
-            if (repairOrderId == null || repairOrderId.isEmpty())
-                throw new InvalidDataTechnicianReport(REPORT_DATA_OR_TECHNICIAN_NULL);
+            RepairOrder repairOrder = findRepairOrderById(request.getRepairOrderId());
+            validateRepairOrderForReportCreation(repairOrder, technician);
+            validateNoExistingNonRejectedReport(request.getRepairOrderId());
 
-            RepairOrder repairOrder = repairOrderRepository.findById(UUID.fromString(repairOrderId))
-                    .orElseThrow(() -> new InvalidTechnicianReportStateException(REPAIR_ORDER_NOT_FOUND));
-
-            if (!repairOrder.getTechnicianId().toString().equals(technician.id().toString())){
-                throw new IllegalAccessTechnicianReport("Technician", "create a report based on this repair order");
-            }
-
-            if (repairOrder.getStatus() != RepairOrderStatus.PENDING_CONFIRMATION) {
-                throw new InvalidTechnicianReportStateException("Repair order is not in progress");
-            }
-
-            boolean hasNonRejectedReport = technicianReportRepository
-                    .findAllByRepairOrderId(UUID.fromString(repairOrderId))
-                    .stream()
-                    .anyMatch(report -> !REJECTED.equals(report.getStatus()));
-            if (hasNonRejectedReport) {
-                throw new DatabaseException("Report already exists");
-            }
-
-            TechnicianReport technicianReport = TechnicianReport.builder()
-                    .reportId(UUID.randomUUID())
-                    .repairOrder(repairOrder)
-                    .technicianId(technician.id())
-                    .diagnosis(createTechnicianReportDraft.getDiagnosis())
-                    .actionPlan(createTechnicianReportDraft.getActionPlan())
-                    .estimatedCost(createTechnicianReportDraft.getEstimatedCost())
-                    .estimatedTimeSeconds(createTechnicianReportDraft.getEstimatedTimeSeconds())
-                    .build();
-
+            TechnicianReport technicianReport = createNewTechnicianReport(request, repairOrder, technician);
             TechnicianReport savedReport = technicianReportRepository.save(technicianReport);
 
             TechnicianReportDraftResponse response = buildTechnicianReportDraftResponse(savedReport);
-            auditLogger.logReportAction("CREATE_DRAFT", savedReport.getReportId().toString(), technician.id().toString());
-            return new GenericResponse<>(true, "Technician report draft created successfully", response);
+            logAuditAction("CREATE_DRAFT", savedReport.getReportId().toString(), technician.id().toString());
+
+            return createSuccessResponse("Technician report draft created successfully", response);
         } catch (Exception ex) {
             return handleException(ex);
         }
@@ -109,35 +84,21 @@ public class TechnicianReportServiceImpl implements TechnicianReportService {
     @Override
     public GenericResponse<TechnicianReportDraftResponse> updateTechnicianReportDraft(
             String technicianReportDraftId,
-            CreateTechnicianReportDraftRequest createTechnicianReportDraft,
+            CreateTechnicianReportDraftRequest request,
             AuthenticatedUser technician) {
 
         try {
-            createTechnicianReportDraft.validate();
-            if (technicianReportDraftId == null)
-                throw new InvalidDataTechnicianReport(TECHNICIAN_REPORT_DATA_NULL);
+            request.validate();
+            TechnicianReport technicianReport = findTechnicianReportById(technicianReportDraftId);
+            validateTechnicianCanUpdateReport(technicianReport, technician);
 
-            TechnicianReport technicianReport = technicianReportRepository.findByReportId(UUID.fromString(technicianReportDraftId))
-                    .orElseThrow(() -> new InvalidTechnicianReportStateException(TECHNICIAN_REPORT_NOT_FOUND));
-
-            if (!technicianReport.getTechnicianId().equals(technician.id())) {
-                throw new IllegalAccessTechnicianReport("Technician","update this report");
-            }
-
-            if (!DRAFT.equals(technicianReport.getStatus())) {
-                throw new InvalidTechnicianReportStateException("Only report drafts can be updated");
-            }
-
-            technicianReport.setDiagnosis(createTechnicianReportDraft.getDiagnosis());
-            technicianReport.setActionPlan(createTechnicianReportDraft.getActionPlan());
-            technicianReport.setEstimatedCost(createTechnicianReportDraft.getEstimatedCost());
-            technicianReport.setEstimatedTimeSeconds(createTechnicianReportDraft.getEstimatedTimeSeconds());
-
+            updateTechnicianReportFields(technicianReport, request);
             TechnicianReport updatedReport = technicianReportRepository.save(technicianReport);
 
             TechnicianReportDraftResponse response = buildTechnicianReportDraftResponse(updatedReport);
-            auditLogger.logReportAction("UPDATE_DRAFT", updatedReport.getReportId().toString(), technician.id().toString());
-            return new GenericResponse<>(true, "Technician report draft updated successfully", response);
+            logAuditAction("UPDATE_DRAFT", updatedReport.getReportId().toString(), technician.id().toString());
+
+            return createSuccessResponse("Technician report draft updated successfully", response);
         } catch (Exception ex) {
             return handleException(ex);
         }
@@ -149,25 +110,14 @@ public class TechnicianReportServiceImpl implements TechnicianReportService {
             AuthenticatedUser technician) {
 
         try {
-            if (technicianReportDraftId == null)
-                throw new InvalidDataTechnicianReport(TECHNICIAN_REPORT_DATA_NULL);
-
-            TechnicianReport technicianReport = technicianReportRepository.findByReportId(UUID.fromString(technicianReportDraftId))
-                    .orElseThrow(() -> new InvalidTechnicianReportStateException(TECHNICIAN_REPORT_NOT_FOUND));
-
-            if (!technicianReport.getTechnicianId().equals(technician.id())) {
-                throw new IllegalAccessTechnicianReport("Technician" ,"delete this report");
-            }
-
-            if (!DRAFT.equals(technicianReport.getStatus())) {
-                throw new InvalidTechnicianReportStateException("Only report drafts can be deleted");
-            }
+            TechnicianReport technicianReport = findTechnicianReportById(technicianReportDraftId);
+            validateTechnicianCanUpdateReport(technicianReport, technician);
 
             TechnicianReportDraftResponse response = buildTechnicianReportDraftResponse(technicianReport);
-
             technicianReportRepository.delete(technicianReport);
-            auditLogger.logReportAction("DELETE_DRAFT", technicianReport.getReportId().toString(), technician.id().toString());
-            return new GenericResponse<>(true, "Technician report draft deleted successfully", response);
+
+            logAuditAction("DELETE_DRAFT", technicianReport.getReportId().toString(), technician.id().toString());
+            return createSuccessResponse("Technician report draft deleted successfully", response);
         } catch (Exception ex) {
             return handleException(ex);
         }
@@ -179,25 +129,16 @@ public class TechnicianReportServiceImpl implements TechnicianReportService {
             AuthenticatedUser technician) {
 
         try {
-            if (technicianReportDraftId == null)
-                throw new InvalidDataTechnicianReport(TECHNICIAN_REPORT_DATA_NULL);
-
-            TechnicianReport technicianReport = technicianReportRepository.findByReportId(UUID.fromString(technicianReportDraftId))
-                    .orElseThrow(() -> new InvalidTechnicianReportStateException(TECHNICIAN_REPORT_NOT_FOUND));
-
-            if (!technicianReport.getTechnicianId().toString().equals(technician.id().toString())) {
-                throw new IllegalAccessTechnicianReport("Technician" ,"submit this report");
-            }
-
-            if (!DRAFT.equals(technicianReport.getStatus())) {
-                throw new InvalidTechnicianReportStateException("Only report drafts can be submitted");
-            }
+            TechnicianReport technicianReport = findTechnicianReportById(technicianReportDraftId);
+            validateTechnicianCanUpdateReport(technicianReport, technician);
 
             technicianReport.submit();
             TechnicianReport updatedReport = technicianReportRepository.save(technicianReport);
+
             TechnicianReportDraftResponse response = buildTechnicianReportDraftResponse(updatedReport);
-            auditLogger.logReportAction("SUBMIT_DRAFT", updatedReport.getReportId().toString(), technician.id().toString());
-            return new GenericResponse<>(true, "Technician report draft submitted successfully", response);
+            logAuditAction("SUBMIT_DRAFT", updatedReport.getReportId().toString(), technician.id().toString());
+
+            return createSuccessResponse("Technician report draft submitted successfully", response);
         } catch (Exception ex) {
             return handleException(ex);
         }
@@ -209,26 +150,14 @@ public class TechnicianReportServiceImpl implements TechnicianReportService {
             AuthenticatedUser customer) {
 
         try {
-            if (technicianReportDraftId == null)
-                throw new InvalidDataTechnicianReport(TECHNICIAN_REPORT_DATA_NULL);
-
-            TechnicianReport technicianReport = technicianReportRepository.findByReportId(UUID.fromString(technicianReportDraftId))
-                    .orElseThrow(() -> new InvalidTechnicianReportStateException("Technician report draft not found"));
-
-            RepairOrder repairOrder = technicianReport.getRepairOrder();
-            if (!repairOrder.getCustomerId().equals(customer.id())) {
-                throw new InvalidTechnicianReportStateException("You are not authorized to accept this report");
-            }
-
-            if (!SUBMITTED.equals(technicianReport.getStatus())) {
-                throw new InvalidTechnicianReportStateException("This report is not in submitted state");
-            }
+            TechnicianReport technicianReport = findTechnicianReportById(technicianReportDraftId);
+            validateCustomerOwnsReportAndCanAct(technicianReport, customer, REPORT_NOT_SUBMITTED);
 
             technicianReport.approve();
             technicianReportRepository.save(technicianReport);
 
-            auditLogger.logReportAction("ACCEPT_SUBMIT", technicianReport.getReportId().toString(), customer.id().toString());
-            return new GenericResponse<>(true, "Technician report draft accepted successfully", null);
+            logAuditAction("ACCEPT_SUBMIT", technicianReport.getReportId().toString(), customer.id().toString());
+            return createSuccessResponse("Technician report draft accepted successfully", null);
         } catch (Exception ex) {
             return handleException(ex);
         }
@@ -240,26 +169,14 @@ public class TechnicianReportServiceImpl implements TechnicianReportService {
             AuthenticatedUser customer) {
 
         try {
-            if (technicianReportDraftId == null)
-                throw new InvalidDataTechnicianReport(TECHNICIAN_REPORT_DATA_NULL);
-
-            TechnicianReport technicianReport = technicianReportRepository.findByReportId(UUID.fromString(technicianReportDraftId))
-                    .orElseThrow(() -> new InvalidTechnicianReportStateException("Technician report draft not found"));
-
-            RepairOrder repairOrder = technicianReport.getRepairOrder();
-            if (!repairOrder.getCustomerId().equals(customer.id())) {
-                throw new IllegalAccessTechnicianReport("Customer", "reject this report");
-            }
-
-            if (!SUBMITTED.equals(technicianReport.getStatus())) {
-                throw new InvalidTechnicianReportStateException("This report is not in submitted state");
-            }
+            TechnicianReport technicianReport = findTechnicianReportById(technicianReportDraftId);
+            validateCustomerOwnsReportAndCanAct(technicianReport, customer, REPORT_NOT_SUBMITTED);
 
             technicianReport.reject();
             technicianReportRepository.save(technicianReport);
 
-            auditLogger.logReportAction("REJECT_SUBMIT", technicianReport.getReportId().toString(), customer.id().toString());
-            return new GenericResponse<>(true, "Technician report draft rejected successfully", null);
+            logAuditAction("REJECT_SUBMIT", technicianReport.getReportId().toString(), customer.id().toString());
+            return createSuccessResponse("Technician report draft rejected successfully", null);
         } catch (Exception ex) {
             return handleException(ex);
         }
@@ -271,27 +188,17 @@ public class TechnicianReportServiceImpl implements TechnicianReportService {
             AuthenticatedUser technician) {
 
         try {
-            if (technicianReportDraftId == null)
-                throw new InvalidDataTechnicianReport(TECHNICIAN_REPORT_DATA_NULL);
-
-            TechnicianReport technicianReport = technicianReportRepository.findByReportId(UUID.fromString(technicianReportDraftId))
-                    .orElseThrow(() -> new InvalidTechnicianReportStateException(TECHNICIAN_REPORT_NOT_FOUND));
-
-            if (!technicianReport.getTechnicianId().equals(technician.id())) {
-                throw new InvalidTechnicianReportStateException("You are not authorized to start work on this report");
-            }
-
-            if (!APPROVED.equals(technicianReport.getStatus())) {
-                throw new InvalidTechnicianReportStateException("Only approved reports can be started");
-            }
+            TechnicianReport technicianReport = findTechnicianReportById(technicianReportDraftId);
+            validateTechnicianCanStartWork(technicianReport, technician);
 
             technicianReport.getRepairOrder().setStatus(RepairOrderStatus.IN_PROGRESS);
-
             technicianReport.startWork();
+
             TechnicianReport updatedReport = technicianReportRepository.save(technicianReport);
             TechnicianReportDraftResponse response = buildTechnicianReportDraftResponse(updatedReport);
-            auditLogger.logReportAction("START_WORK", updatedReport.getReportId().toString(), technician.id().toString());
-            return new GenericResponse<>(true, "Technician report draft started successfully", response);
+
+            logAuditAction("START_WORK", updatedReport.getReportId().toString(), technician.id().toString());
+            return createSuccessResponse("Technician report draft started successfully", response);
         } catch (Exception ex) {
             return handleException(ex);
         }
@@ -303,100 +210,82 @@ public class TechnicianReportServiceImpl implements TechnicianReportService {
             AuthenticatedUser technician) {
 
         try {
-            if (technicianReportDraftId == null)
-                throw new InvalidDataTechnicianReport(TECHNICIAN_REPORT_DATA_NULL);
-
-            TechnicianReport technicianReport = technicianReportRepository.findByReportId(UUID.fromString(technicianReportDraftId))
-                    .orElseThrow(() -> new InvalidTechnicianReportStateException(TECHNICIAN_REPORT_NOT_FOUND));
-
-            if (!technicianReport.getTechnicianId().equals(technician.id())) {
-                throw new InvalidTechnicianReportStateException("You are not authorized to complete work on this report");
-            }
-
-            if (!IN_PROGRESS.equals(technicianReport.getStatus())) {
-                throw new InvalidTechnicianReportStateException("Only reports in progress can be completed");
-            }
+            TechnicianReport technicianReport = findTechnicianReportById(technicianReportDraftId);
+            validateTechnicianCanCompleteWork(technicianReport, technician);
 
             technicianReport.complete();
+            updateRepairOrderStatusToCompleted(technicianReport);
             TechnicianReport updatedReport = technicianReportRepository.save(technicianReport);
+
+            publishRepairCompletedEvent(updatedReport);
+
             TechnicianReportDraftResponse response = buildTechnicianReportDraftResponse(updatedReport);
+            logAuditAction("COMPLETE_WORK", updatedReport.getReportId().toString(), technician.id().toString());
 
-            RepairOrderCompletedEvent repairOrderCompletedEvent = RepairOrderCompletedEvent.builder()
-                    .repairOrderId(technicianReport.getReportId())
-                    .technicianId(technicianReport.getTechnicianId())
-                    .amount(technicianReport.getEstimatedCost())
-                    .completedAt(Instant.now())
-                    .build();
-
-            technicianReport.getRepairOrder().setStatus(RepairOrderStatus.COMPLETED);
-            repairEventPublisher.publishRepairCompleted(repairOrderCompletedEvent);
-
-            auditLogger.logReportAction("COMPLETE_WORK", updatedReport.getReportId().toString(), technician.id().toString());
-            return new GenericResponse<>(true, "Technician report draft completed successfully", response);
+            return createSuccessResponse("Technician report draft completed successfully", response);
         } catch (Exception ex) {
             return handleException(ex);
         }
     }
 
     @Override
-    public GenericResponse<List<TechnicianReportDraftResponse>> getTechnicianReportByStatusForTechnician(String status, AuthenticatedUser technician) {
+    public GenericResponse<List<TechnicianReportDraftResponse>> getTechnicianReportByStatusForTechnician(
+            String status,
+            AuthenticatedUser technician) {
+
         try {
-            List<TechnicianReport> reports = technicianReportRepository.findAllByTechnicianIdAndStatus(technician.id(), upperCase(status));
+            List<TechnicianReport> reports = technicianReportRepository
+                    .findAllByTechnicianIdAndStatus(technician.id(), upperCase(status));
+
             List<TechnicianReportDraftResponse> response = reports.stream()
                     .map(this::buildTechnicianReportDraftResponse)
                     .toList();
 
-            reports.forEach(report -> auditLogger.logReportAction("GET_BY_STATUS_TECHNICIAN", report.getReportId().toString(), technician.id().toString()));
-            return new GenericResponse<>(true, "Technician reports retrieved successfully", response);
+            logReportsAuditAction(reports, "GET_BY_STATUS_TECHNICIAN", technician.id().toString());
+            return createSuccessResponse("Technician reports retrieved successfully", response);
         } catch (DataAccessException ex) {
             return handleException(ex);
         }
     }
 
     @Override
-    public GenericResponse<List<TechnicianReportDraftResponse>> getTechnicianReportByStatusForCustomer(String status, AuthenticatedUser customer) {
+    public GenericResponse<List<TechnicianReportDraftResponse>> getTechnicianReportByStatusForCustomer(
+            String status,
+            AuthenticatedUser customer) {
 
         try {
-            if (status.equals(DRAFT)) {
-                throw new InvalidTechnicianReportStateException("Only report above Draft can be seen by Customer");
-            }
+            validateCustomerCanViewStatus(status);
 
-            List<TechnicianReport> reports = technicianReportRepository.findAllByStatus(status);
+            List<TechnicianReport> reports = getCustomerVisibleReports(upperCase(status), customer);
             if (reports.isEmpty()) {
                 return new GenericResponse<>(false, "No technician report submissions found", null);
             }
-            reports = reports.stream()
-                    .filter(report -> report.getRepairOrder().getCustomerId().equals(customer.id()))
-                    .filter(report -> !report.getStatus().equals(DRAFT))
-                    .toList();
 
             List<TechnicianReportDraftResponse> response = reports.stream()
                     .map(this::buildTechnicianReportDraftResponse)
                     .toList();
-            reports.forEach(report -> auditLogger.logReportAction("GET_BY_STATUS_CUSTOMER", report.getReportId().toString(), customer.id().toString()));
-            return new GenericResponse<>(true, "Technician report submissions retrieved successfully", response);
+
+            logReportsAuditAction(reports, "GET_BY_STATUS_CUSTOMER", customer.id().toString());
+
+            return createSuccessResponse("Technician report submissions retrieved successfully", response);
         } catch (DataAccessException ex) {
             return handleException(ex);
         }
     }
 
     @Override
-    public GenericResponse<TechnicianReportDraftResponse> getTechnicianReportById(String technicianReportId, AuthenticatedUser user) {
+    public GenericResponse<TechnicianReportDraftResponse> getTechnicianReportById(
+            String technicianReportId,
+            AuthenticatedUser user) {
+
         try {
-            if (technicianReportId == null)
-                throw new InvalidDataTechnicianReport(TECHNICIAN_REPORT_DATA_NULL);
-
-            TechnicianReport technicianReport = technicianReportRepository.findByReportId(UUID.fromString(technicianReportId))
-                    .orElseThrow(() -> new InvalidTechnicianReportStateException(TECHNICIAN_REPORT_NOT_FOUND));
-
-            if (user.role() == UserRole.CUSTOMER) technicianReport.customerCanSee();
-            else if (user.role() == UserRole.TECHNICIAN && !technicianReport.getTechnicianId().equals(user.id())) {
-                throw new InvalidTechnicianReportStateException("You are not authorized to view this report");
-            }
+            TechnicianReport technicianReport = findTechnicianReportById(technicianReportId);
+            validateUserCanViewReport(technicianReport, user);
 
             TechnicianReportDraftResponse response = buildTechnicianReportDraftResponse(technicianReport);
-            auditLogger.logReportAction("GET_BY_ID", technicianReport.getReportId().toString(), user.id().toString());
-            return new GenericResponse<>(true, "Technician report retrieved successfully", response);
+            logAuditAction("GET_BY_ID", technicianReport.getReportId().toString(), user.id().toString());
+
+            return createSuccessResponse("Technician report retrieved successfully", response);
         } catch (Exception ex) {
             return handleException(ex);
         }
@@ -405,26 +294,172 @@ public class TechnicianReportServiceImpl implements TechnicianReportService {
     @Override
     public GenericResponse<List<ViewRepairOrderResponse>> getRepairOrderByTechnicianId(AuthenticatedUser user) {
         try {
-            List<ViewRepairOrderResponse> repairOrders = repairOrderRepository.findByTechnicianId(user.id()).stream()
-                    .filter(repairOrder -> repairOrder.getStatus() == RepairOrderStatus.PENDING_CONFIRMATION)
-                    .map(ro -> ViewRepairOrderResponse.builder()
-                            .id(ro.getId())
-                            .customerId(ro.getCustomerId())
-                            .technicianId(ro.getTechnicianId())
-                            .status(ro.getStatus())
-                            .itemName(ro.getItemName())
-                            .itemCondition(ro.getItemCondition())
-                            .issueDescription(ro.getIssueDescription())
-                            .desiredServiceDate(ro.getDesiredServiceDate())
-                            .createdAt(ro.getCreatedAt())
-                            .updatedAt(ro.getUpdatedAt())
-                            .build())
-                    .collect(Collectors.toList());
+            List<ViewRepairOrderResponse> repairOrders = repairOrderRepository.findByTechnicianId(user.id())
+                    .stream()
+                    .filter(this::isPendingConfirmation)
+                    .map(this::buildViewRepairOrderResponse)
+                    .toList();
 
-            return new GenericResponse<>(true, "Repair orders retrieved successfully", repairOrders);
+            return createSuccessResponse("Repair orders retrieved successfully", repairOrders);
         } catch (Exception ex) {
             return handleException(ex);
         }
+    }
+
+    private RepairOrder findRepairOrderById(String repairOrderId) {
+        return repairOrderRepository.findById(UUID.fromString(repairOrderId))
+                .orElseThrow(() -> new InvalidTechnicianReportStateException(REPAIR_ORDER_NOT_FOUND));
+    }
+
+    private TechnicianReport findTechnicianReportById(String technicianReportId) {
+        if (technicianReportId == null) {
+            throw new InvalidDataTechnicianReport(TECHNICIAN_REPORT_DATA_NULL);
+        }
+
+        return technicianReportRepository.findByReportId(UUID.fromString(technicianReportId))
+                .orElseThrow(() -> new InvalidTechnicianReportStateException(TECHNICIAN_REPORT_NOT_FOUND));
+    }
+
+    private void validateNoExistingNonRejectedReport(String repairOrderId) {
+        boolean hasNonRejectedReport = technicianReportRepository
+                .findAllByRepairOrderId(UUID.fromString(repairOrderId))
+                .stream()
+                .anyMatch(report -> !REJECTED.equals(report.getStatus()));
+
+        if (hasNonRejectedReport) {
+            throw new DatabaseException(REPAIR_ORDER_ALREADY_EXISTS);
+        }
+    }
+
+    private TechnicianReport createNewTechnicianReport(
+            CreateTechnicianReportDraftRequest request,
+            RepairOrder repairOrder,
+            AuthenticatedUser technician) {
+
+        return TechnicianReport.builder()
+                .reportId(UUID.randomUUID())
+                .repairOrder(repairOrder)
+                .technicianId(technician.id())
+                .diagnosis(request.getDiagnosis())
+                .actionPlan(request.getActionPlan())
+                .estimatedCost(request.getEstimatedCost())
+                .estimatedTimeSeconds(request.getEstimatedTimeSeconds())
+                .build();
+    }
+
+    private void updateTechnicianReportFields(TechnicianReport report, CreateTechnicianReportDraftRequest request) {
+        report.setDiagnosis(request.getDiagnosis());
+        report.setActionPlan(request.getActionPlan());
+        report.setEstimatedCost(request.getEstimatedCost());
+        report.setEstimatedTimeSeconds(request.getEstimatedTimeSeconds());
+    }
+
+    private void validateRepairOrderForReportCreation(RepairOrder repairOrder, AuthenticatedUser technician) {
+        if (repairOrder.getStatus() != RepairOrderStatus.PENDING_CONFIRMATION) {
+            throw new InvalidTechnicianReportStateException(REPAIR_ORDER_NOT_IN_PROGRESS);
+        }
+
+        if (!repairOrder.getTechnicianId().equals(technician.id())) {
+            throw new IllegalAccessTechnicianReport("Technician", "create a report based on this repair order");
+        }
+    }
+
+    private void validateTechnicianCanUpdateReport(TechnicianReport technicianReport, AuthenticatedUser technician) {
+        if (!technicianReport.getTechnicianId().equals(technician.id())) {
+            throw new IllegalAccessTechnicianReport("Technician", "update this report");
+        }
+
+        if (!technicianReport.technicianCanModify()) {
+            throw new InvalidTechnicianReportStateException(ONLY_DRAFTS_CAN_BE_UPDATED);
+        }
+    }
+
+    private void validateCustomerOwnsReportAndCanAct(TechnicianReport technicianReport, AuthenticatedUser customer, String requiredStatusMessage) {
+        RepairOrder repairOrder = technicianReport.getRepairOrder();
+        if (!repairOrder.getCustomerId().equals(customer.id())) {
+            throw new IllegalAccessTechnicianReport("Customer", "perform this action on the report");
+        }
+        if (!SUBMITTED.equals(technicianReport.getStatus())) {
+            throw new InvalidTechnicianReportStateException(requiredStatusMessage);
+        }
+    }
+
+    private void validateTechnicianCanStartWork(TechnicianReport technicianReport, AuthenticatedUser technician) {
+        if (!technicianReport.getTechnicianId().equals(technician.id())) {
+            throw new InvalidTechnicianReportStateException(UNAUTHORIZED_REPORT_UPDATE);
+        }
+
+        if (!APPROVED.equals(technicianReport.getStatus())) {
+            throw new InvalidTechnicianReportStateException(ONLY_APPROVED_REPORTS_CAN_START);
+        }
+    }
+
+    private void validateTechnicianCanCompleteWork(TechnicianReport technicianReport, AuthenticatedUser technician) {
+        if (!technicianReport.getTechnicianId().equals(technician.id())) {
+            throw new InvalidTechnicianReportStateException(UNAUTHORIZED_REPORT_UPDATE);
+        }
+
+        if (!IN_PROGRESS.equals(technicianReport.getStatus())) {
+            throw new InvalidTechnicianReportStateException(ONLY_IN_PROGRESS_REPORTS_CAN_COMPLETE);
+        }
+    }
+
+    private void validateCustomerCanViewStatus(String status) {
+        if (DRAFT.equals(upperCase(status))) {
+            throw new InvalidTechnicianReportStateException(CUSTOMER_CANNOT_VIEW_DRAFTS);
+        }
+    }
+
+    private void validateUserCanViewReport(TechnicianReport technicianReport, AuthenticatedUser user) {
+        if (user.role() == UserRole.CUSTOMER) {
+            if (!technicianReport.getRepairOrder().getCustomerId().equals(user.id())) {
+                throw new InvalidTechnicianReportStateException(UNAUTHORIZED_REPORT_ACCESS);
+            }
+            technicianReport.customerCanSee();
+        } else if (user.role() == UserRole.TECHNICIAN && !technicianReport.getTechnicianId().equals(user.id())) {
+            throw new InvalidTechnicianReportStateException(UNAUTHORIZED_REPORT_ACCESS);
+        }
+    }
+
+    private List<TechnicianReport> getCustomerVisibleReports(String status, AuthenticatedUser customer) {
+        List<TechnicianReport> reports = technicianReportRepository.findAllByStatus(status);
+        return reports.stream()
+                .filter(report -> report.getRepairOrder().getCustomerId().equals(customer.id()))
+                .toList();
+    }
+
+    private void publishRepairCompletedEvent(TechnicianReport technicianReport) {
+        RepairOrderCompletedEvent event = RepairOrderCompletedEvent.builder()
+                .repairOrderId(technicianReport.getRepairOrder().getId())
+                .technicianId(technicianReport.getTechnicianId())
+                .amount(technicianReport.getEstimatedCost())
+                .completedAt(Instant.now())
+                .build();
+
+        repairEventPublisher.publishRepairCompleted(event);
+    }
+
+    private void updateRepairOrderStatusToCompleted(TechnicianReport technicianReport) {
+        technicianReport.getRepairOrder().setStatus(RepairOrderStatus.COMPLETED);
+    }
+
+    private boolean isPendingConfirmation(RepairOrder repairOrder) {
+        return repairOrder.getStatus() == RepairOrderStatus.PENDING_CONFIRMATION;
+    }
+
+    private ViewRepairOrderResponse buildViewRepairOrderResponse(RepairOrder ro) {
+        return ViewRepairOrderResponse.builder()
+                .id(ro.getId())
+                .customerId(ro.getCustomerId())
+                .technicianId(ro.getTechnicianId())
+                .status(ro.getStatus())
+                .itemName(ro.getItemName())
+                .itemCondition(ro.getItemCondition())
+                .issueDescription(ro.getIssueDescription())
+                .desiredServiceDate(ro.getDesiredServiceDate())
+                .createdAt(ro.getCreatedAt())
+                .updatedAt(ro.getUpdatedAt())
+                .build();
     }
 
     private TechnicianReportDraftResponse buildTechnicianReportDraftResponse(TechnicianReport report) {
@@ -440,7 +475,19 @@ public class TechnicianReportServiceImpl implements TechnicianReportService {
                 .build();
     }
 
+    private <T> GenericResponse<T> createSuccessResponse(String message, T data) {
+        return new GenericResponse<>(true, message, data);
+    }
+
     private <T> GenericResponse<T> handleException(Exception ex) {
         return new GenericResponse<>(false, ex.getMessage(), null);
+    }
+
+    private void logAuditAction(String action, String reportId, String userId) {
+        auditLogger.logReportAction(action, reportId, userId);
+    }
+
+    private void logReportsAuditAction(List<TechnicianReport> reports, String action, String userId) {
+        reports.forEach(report -> auditLogger.logReportAction(action, report.getReportId().toString(), userId));
     }
 }
